2007-12-31 Robert Schwebel <r.schwebel@pengutronix.de>

	* xauth: added patch by Claudio Leonel

2007-12-29 Robert Schwebel <r.schwebel@pengutronix.de>

	* net-snmp: refactored menu entries to use positive logic
	* fbgrab: added; patch by Roland Hostettler
	* net-snmp: added; patch by Randall Loomis

2007-12-28  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: fixed URL
	* mad: fixed URL, moved packet to pengutronix server because
	upstream version has disappeared
	* pekwm: fixed URL (dito)
	* sqlite: version bump, old version was not available any more
	* unionfs: fixed URL
	* pdksh: fixed URL
	* flash: fixed URL

2007-12-27  Robert Schwebel <r.schwebel@pengutronix.de>

	* lighttpd: adds lighttpd to ptxdist. Lighttpd is another
	popular web server for embedded targets. Patch by Daniel
	Schnell. The configuration is dependant on fast cgi, pcre and
	openssl.

	* fcgi: integrates fastcgi 2.4.0 to be used e.g. by lighttpd.
	It doesn't contain any patches because it configures quite well
	under linux. Patch by Daniel Schnell.

2007-12-13  Robert Schwebel <r.schwebel@pengutronix.de>

	* pekwm: fix URL; patch by Marco Cavallini, inspired by
	BET-frogger[DO].

2007-12-09  Robert Schwebel <r.schwebel@pengutronix.de>

	* .in: remove leading whitespace; found by Marco Cavallini.

2007-10-27  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: update to version 1.6.9p2. It patches some compile
	breakage, when trying to cross compile. It also allows to
	install a user sudoers file from projectroot.

	Change mail and pam options to positive logic.

	Signed-off-by: Carsten Schlote <c.schlote@konzeptpark.de>

	* netkit-ftp: Removed libc dependency from netkit-ftp.
	Removed ipkg dependency to libc from netkit-ftp packet. As
	we use glibc this caused the packet to refuse installation.

	Signed-off-by: Carsten Schlote <c.schlote@konzeptpark.de>

	* libgmp: remove gmp3 and gmp4, added libgmp instead. Compiles
	at least for ARM.
