@@ -133,6 +133,10 @@ N: Daniel Schnell
 E: daniel.schnell@marel.com
 D: Developer
 
+N: Tom St
+E: t.st1@gmx.net
+D: Developer
+
 N: Britta Schwebel
 E: b.schwebel@pengutronix.de
 D: Debugger, Head of Unlogical Code Department
