@@ -30,6 +30,7 @@ source "rules/etherwake.in"
 source "rules/ethtool.in"
 source "rules/eventlog.in"
 source "rules/fcgi.in"
+source "rules/haserl.in"
 source "rules/iproute2.in"
 source "rules/ifplugd.in"
 source "rules/inetutils.in"
